# USA-Forge-Cell

./: 2024 parts list.csv  CLAUDE.md  Furnace steps.md  analyze_payloads.py  arduino_err.txt  cleanparts.csv  dieScanner_program_summary.md  err.txt  fanucrobot0301_r30ibp.eds  improvement_plan.txt  parse_parts.py  prompt.txt  python_project_structure_guide.md  readme.txt  registers_inputs_outputs.xlsx  requirements.txt  results.txt  summary.md  usa-forge-cell-env.yaml  vars.txt
.claude/: settings.local.json
Programs/Python/dieScanner/diescanProd/: DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
Programs/Python/dieScanner/diescanProd/src/diescanprod/: __init__.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/cli/: __init__.py  commands.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/config/: __init__.py  safety_parameters.py  settings.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/core/: __init__.py  advanced_scanning.py  center_calculation.py  edge_detection.py  scanner.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/exceptions/: __init__.py  custom_exceptions.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/models/: __init__.py  data_models.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/services/: __init__.py  robot_service.py  sensor_service.py
Programs/Python/dieScanner/diescanProd/src/diescanprod/utils/: __init__.py  geometric_calculations.py  logging_utils.py  validation.py
Programs/Python/dieScanner/diescanProd/tests/: __init__.py
registers_io/: claude_changes.csv  digital_in.csv  digital_out.csv  group_in.csv  group_out.csv  (+5 more)
(+148 files in other folders)
